# SF_analysis_software

./: .gitignore  CMakeLists.txt  README.md  SF_sigma_cut_params.json  buildProject.sh  getSummary  sourceMods.txt  spare.txt
6.5pELossPlots/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
7.5pELossPlots/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
analysis/: EPPI0_Xsec.py  quilt2D.py  rev_xsec.py  visualize_xsec.py
config/: glossary.json  params.conf  params.json
config/FID/: aaoGenMatch_params.json  eppi0_params.json  genMatch_params.json  inclusiveRec_params.json
config/NONFID/: aaoGenMatch_params.json  genOnly_params.json  inclusiveRec_params.json
config/RGA_1060_FA18/FID/: eppi0GEMC.json  eppi0REC.json  inclusiveGEMC.json  inclusiveREC.json
config/RGA_1060_FA18/NONFID/: eppi0REC.json  genOnly.json  inclusiveGEMC.json  inclusiveREC.json
config/RGA_1060_tor-1_FA18/FID/: eppi0GEMC.json  eppi0REC.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGA_1060_tor-1_FA18/NONFID/: eppi0REC.json  genOnly.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGA_1060_tor-1_FA18/cuts_and_corrections/: SF_sigma_cut_params_GEMC.json  SF_sigma_cut_params_REC.json  protonEnergyLoss_params_standard.json  recSF_sigma_cut_params.json
config/RGA_1060_tor1_FA18/FID/: eppi0GEMC.json  eppi0REC.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGA_1060_tor1_FA18/NONFID/: eppi0REC.json  genOnly.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGA_1060_tor1_FA18/cuts_and_corrections/: SF_sigma_cut_params.json  SF_sigma_cut_params_GEMC.json  SF_sigma_cut_params_REC.json  protonEnergyLoss_params_standard.json
config/RGK_6394_FA23/FID/: eppi0GEMC.json  eppi0REC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGK_6394_FA23/NONFID/: eppi0REC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGK_6535_FA18/FID/: eppi0GEMC.json  eppi0REC.json  eppi0_params.json  genMatch_params.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json  inclusiveRec_params.json
config/RGK_6535_FA18/NONFID/: eppi0REC.json  eppi0_params.json  genMatch_params.json  genOnly.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json
config/RGK_6535_FA18/cuts_and_corrections/: SF_sigma_cut_params.json  SF_sigma_cut_params_GEMC.json  SF_sigma_cut_params_REC.json  protonEnergyLoss_params_postGlobal.json  protonEnergyLoss_params_standard.json
config/RGK_7546_FA18/FID/: eppi0REC.json  eppi0_params.json  genMatch_params.json  inclusiveGEMC.json  inclusiveMATCH.json  inclusiveREC.json  inclusiveRec_params.json
config/RGK_7546_FA18/cuts_and_corrections/: protonEnergyLoss_params.json  recSF_sigma_cut_params.json
config/cuts_and_corrections/RGK_6535_FA18/: SF_sigma_cut_params.json
correction_coeffs/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
include/: BranchVars.h  BranchVarsLinkDef.h  ConfigLoader.h  FiducialCuts.h  KinematicCorrections.h  Kinematics.h  PhysicalConstants.h  ProcessManager.h  SFCuts.h  Vars.h  VarsLinkDef.h  includes.h
macros/: EPPI0plots.py  addMeta.py  computeXsec.py  cumulativeCharge.C  getSFCuts.py  globalFitCorrections.py  overlayEPPI0plots.py  protonEnergyLossCorrections.py  recPlots.py  showBySector.py
macros/old/: EPPI0plots.C  acceptancePlots.C
postGlobalBinnedCorrections6.5/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
pyMacros/: pidAcceptances.py  plotALUvsPhi.py  plotBSA.py  protonEnergyLossCorrections.py  recPlots.py  showBySector.py  test.py
rootMacros/: EPPI0plots.C  GEMCstudyPlots.C  MCstudyPlots.C  acceptancePlots.C  analyzeBSA_OLD.C
src/: BranchVars.cpp  ConfigLoader.cpp  FiducialCuts.cpp  KinematicCorrections.cpp  Kinematics.cpp  ProcessManager.cpp  SFCuts.cpp  Vars.cpp  getSummary.cpp  main.cpp
standardBinnedCorrections6.5/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
uncorrectedBinnedCorrections6.5/: CD_proton_kinCorr_coeffs.json  FD_proton_kinCorr_coeffs.json
xsec_archive/RGA_fa18_t-1_BkgSub/: xsec_log.txt
xsec_archive/RGA_fa18_t1_BkgSub/: xsec_log.txt
xsec_archive/RGK_6535_BkgSub/: xsec_log.txt
